# Distributed-Key-Value-Database

./: CMakeLists.txt  README.md
client_api/: coordinator_client.py  fastapi_server.py  requirements.txt
config/: cluster_config.json
include/: coordinator.h  hash_ring.h  heartbeat.h  leader_election.h  replication.h  storage_engine.h  tcp_client.h  tcp_server.h  utils.h
node/: coordinator.cpp  hash_ring.cpp  heartbeat.cpp  leader_election.cpp  main.cpp  replication.cpp  storage_engine.cpp  tcp_server.cpp  utils.cpp
scripts/: start_cluster.ps1  start_cluster.sh  stop_cluster.ps1
tests/: test_api.py  test_fault_tolerance.py  test_hash_ring.cpp  test_storage.cpp
